src/istio/istio-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-istio-service
spec:
  ports:
  - port: 80
    name: http
  selector:
    run: app
