src/istio/ingress-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ingress-virtual-service
spec:
  hosts:
  - "*"
  gateways:
  - my-gateway
  http:
  - route:
    - destination:
        host: my-istio-service
        subset: v1
        port:
          number: 80
      weight: 50
    - destination:
        host: my-istio-service
        subset: v2
        port:
          number: 80
      weight: 50
